changed title of post

--- a/_posts/2020-06-18-hello.md
+++ b/_posts/2020-06-18-hello.md
@@ -1,4 +1,7 @@
-## How to employ linear regression from sklearn
+---
+layout: post
+title: How to employ linear regression from sklearn
+---
 
 Linear regressions are a model of the form:
 
